[package]
name = "marcloudbackup-old-stats"
version = "0.1.0"
edition = "2021"
authors = ["Marcelektro"]
description = "A tool for analyzing chatlogs to reconstruct historical statistics of marCloudBackup"
homepage = "https://marcloud.net/backupbot"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
csv = "1.3.0"
chrono = { version = "0.4", features = ["serde"] }
